finished the styles for index and post

--- a/recipe-starter/index.html
+++ b/recipe-starter/index.html
@@ -14,15 +14,17 @@
 
 <body>
 	<!-- Navigation -->
-		<nav id="pages"> 
-			<a href="">Home</a>
-		</nav>
+  <nav>
+      <div class="nav-wrapper">
+        <p class="brand-logo">Hungry Mungry's Recipe Book</p>
+        <ul id="nav-mobile" class="right hide-on-med-and-down">
+          <li><a href="./index.html">Home</a></li>
+          <li><a href="">Create Post</a></li>
+
+        </ul>
+      </div>
+    </nav>
 	<!-- Header -->
-	<header class="header"> 
-		<h1 id=""> Hungry Mungry's Recipe Book </h1> 
-	<!-- button for new -->
-	
-	</header>
 
 
 	<!-- containers for post -->
@@ -35,16 +37,23 @@
       </div>
       <div class="card-stacked">
         <div class="card-content">
-        <h4>  Vote  </h4>	
 
-        <div class="vote">
-          <a class="btn-floating btn-large waves-effect waves-light green"><i class="material-icons">+</i></a>
-          <h5>10</h5>
-          <a class="btn-floating btn-large waves-effect waves-light red"><i class="material-icons">-</i></a>
-        </div>
+        <h5>Description</h5>
+        <p class="description"> The rich aroma of the dish wafted down and beckoned you .You could not resist the delightful sensations that whipped up inside your memory at the mere thought of delving your teeth deep and fast into the pulpy texture of the pizza. Cheese spread atop in copious amounts and the wide assortment of condiments sprinkled in the perfect amounts mingle to produce a taste unlike any other: salty,peppery,cheesy with a whiff of Italian cuisine and a tinge of Greek taste. <p>
+          <hr>
+
+        <div class="vote-style">
+          <h6>  Vote  </h6 >	
+
+          <div class="vote">
+            <a class="btn-floating btn-small waves-effect waves-light green"><i class="material-icons">+</i></a>
+            <h6>10</h6>
+            <a class="btn-floating btn-small waves-effect waves-light red"><i class="material-icons">-</i></a>
+          </div>
+          </div>
         </div>
         <div class="card-action">
-          <a href="./post.html">This is a link</a>
+          <a href="./post.html">How to make</a>
         </div>
       </div>
    	 </div>
