--- a/recipe-starter/new_post.html
+++ b/recipe-starter/new_post.html
@@ -13,9 +13,16 @@
 
 <body>
 	<!-- Navigation -->
-	<nav id="pages"> 
-		<a href="">Home</a>
-	</nav>
+  <nav>
+      <div class="nav-wrapper">
+        <p class="brand-logo">Hungry Mungry's Recipe Book</p>
+        <ul id="nav-mobile" class="right hide-on-med-and-down">
+          <li><a href="./index.html">Home</a></li>
+          <li><a href="">Create Post</a></li>
+
+        </ul>
+      </div>
+    </nav>
 	<!-- Header -->
 	<header class="header"> 
 		<h1 id=""> Hungry Mungry's Recipe Book   </h1> 
