--- a/recipe-starter/post.html
+++ b/recipe-starter/post.html
@@ -14,14 +14,16 @@
 <body>
 	<!-- Navigation -->
 
-	<nav>
-	    <div class="nav-wrapper">
-	      <a href="#" class="brand-logo">Hungry Mungry's Recipe Book</a>
-	      <ul id="nav-mobile" class="right hide-on-med-and-down">
-	        <li><a href="'./index.html'">Home</a></li>
-	      </ul>
-	   	</div>
-  	</nav>
+  <nav>
+      <div class="nav-wrapper">
+        <p class="brand-logo">Hungry Mungry's Recipe Book</p>
+        <ul id="nav-mobile" class="right hide-on-med-and-down">
+          <li><a href="./index.html">Home</a></li>
+          <li><a href="">Create Post</a></li>
+
+        </ul>
+      </div>
+    </nav>
 
 		<h4 id=""> Title of recipe </h1> 
 				
@@ -70,7 +72,7 @@
 		<div class="card">
 	 	 <div class="card-body">
 	   		 This is some text within a card body. Comment 1. jkadngpiqrungqrgunergnqprgpqr.
-	 	 <a class="btn-floating btn-small waves-effect waves-light red"><i class="material-icons">X</i></a>
+	 	 <a class="btn-floating btn-small waves-effect waves-light red"><i class="material-icons">x</i></a>
 		</div>
 	 	 </div>
 	</div>
@@ -79,7 +81,7 @@
 		<div class="card">
 	 	 <div class="card-body">
 	   		 This is some text within a card body. Comment 1. jkadngpiqrungqrgunergnqprgpqr.
-	 	 <a class="btn-floating btn-small waves-effect waves-light red"><i class="material-icons">X</i></a>
+	 	 <a class="btn-floating btn-small waves-effect waves-light red"><i class="material-icons">x</i></a>
 		</div>
 	 	 </div>
 	</div>
@@ -88,7 +90,7 @@
 		<div class="card">
 	 	 <div class="card-body">
 	   		 This is some text within a card body. Comment 1. jkadngpiqrungqrgunergnqprgpqr.
-	 	 <a class="btn-floating btn-small waves-effect waves-light red"><i class="material-icons">X</i></a>
+	 	 <a class="btn-floating btn-small waves-effect waves-light red"><i class="material-icons">x</i></a>
 		</div>
 	 	 </div>
 	</div>
