fixed the field for ingredients

--- a/recipe-starter/new_post.html
+++ b/recipe-starter/new_post.html
@@ -31,6 +31,30 @@
 
 
 
+  <div class="column">
+  	<form class="col s12">
+<!--       <div class="row">
+ -->    <div class="input-field col s12">
+          <input placeholder="Title" id="title" type="text" class="validate">
+        </div>
+        <div class="input-field col s12">
+       <!--    <input placeholder="Ingredients" id="ingredients" type="textarea" rows="5" cols="10" class="validate"> -->
+          <textarea cols="40" rows="5"></textarea>
+        </div>
+        <div class="input-field col s12">
+          <input placeholder="Directions" id="Directions" type="text" class="validate">
+        </div>
+        <div class="input-field col s12">
+          <input placeholder="Description" id="Description" type="text" class="validate">
+        </div>
+        <div class="input-field col s12">
+          <input placeholder="Add image source" id="image" type="text" class="validate">
+        </div>
+    </form>
+	     <button class="btn waves-effect waves-light" type="submit" name="action">Create
+	    <i class="material-icons right"></i>
+  	</button>
+  </div>
 
 	<!-- form -->
 	<!-- title -->
