--- a/recipe-starter/post.html
+++ b/recipe-starter/post.html
@@ -19,7 +19,7 @@
         <p class="brand-logo">Hungry Mungry's Recipe Book</p>
         <ul id="nav-mobile" class="right hide-on-med-and-down">
           <li><a href="./index.html">Home</a></li>
-          <li><a href="">Create Post</a></li>
+          <li><a href="./new_post.html">Create Post</a></li>
 
         </ul>
       </div>
