--- a/recipe-starter/new_post.html
+++ b/recipe-starter/new_post.html
@@ -24,10 +24,6 @@
       </div>
     </nav>
 	<!-- Header -->
-	<header class="header"> 
-		<h1 id=""> Hungry Mungry's Recipe Book   </h1> 
-	<!-- button for new -->
-	</header>
 
 
 
@@ -38,14 +34,13 @@
           <input placeholder="Title" id="title" type="text" class="validate">
         </div>
         <div class="input-field col s12">
-       <!--    <input placeholder="Ingredients" id="ingredients" type="textarea" rows="5" cols="10" class="validate"> -->
-          <textarea cols="40" rows="5"></textarea>
-        </div>
-        <div class="input-field col s12">
-          <input placeholder="Directions" id="Directions" type="text" class="validate">
-        </div>
-        <div class="input-field col s12">
           <input placeholder="Description" id="Description" type="text" class="validate">
+        </div>
+        <div class="input-field col s12" >
+          <textarea cols="40" rows="5" placeholder="Ingredients" class="validate" id="ingredients"></textarea>
+        </div>
+        <div class="input-field col s12" >
+          <textarea cols="40" rows="5" placeholder="Directions" class="validate" id="directions"></textarea>
         </div>
         <div class="input-field col s12">
           <input placeholder="Add image source" id="image" type="text" class="validate">
