--- a/recipe-starter/post.html
+++ b/recipe-starter/post.html
@@ -28,6 +28,9 @@
 		<h4 id=""> Title of recipe </h1> 
 				
 		<img src="http://dreamatico.com/data_images/food/food-6.jpg" alt="food">
+		<a class="waves-effect waves-light btn" id="update-btn">Update Post</a>
+
+
 	<div class="single-post">
 		<div class="ingredients-section">
 			<h5>Ingredients</h5>
@@ -54,11 +57,10 @@
     <form class="col s12">
       <div class="row">
         <div class="input-field col s6">
-          <input placeholder="" id="comment" type="text" class="validate">
-          <label for="comment">Write your comment!</label>
+          <input placeholder="Write your comment!" id="comment" type="text" class="validate">
         </div>
       </div>     
-        <a class="waves-effect waves-light btn">button</a>
+        <a class="waves-effect waves-light btn">New Comment</a>
     </form>
   </div>
 
