frontend initial commit

--- a/recipe-starter/index.html
+++ b/recipe-starter/index.html
@@ -19,7 +19,7 @@
         <p class="brand-logo">Hungry Mungry's Recipe Book</p>
         <ul id="nav-mobile" class="right hide-on-med-and-down">
           <li><a href="./index.html">Home</a></li>
-          <li><a href="./new_post.html">Create Post</a></li>
+          <li><a href="./new_post.html">Create Recipe</a></li>
 
         </ul>
       </div>
@@ -43,7 +43,7 @@
           <hr>
 
         <div class="vote-style">
-          <h6>  Vote  </h6 >	
+          <h6>  Vote  </h6 >
 
           <div class="vote">
             <a class="btn-floating btn-small waves-effect waves-light green"><i class="material-icons">+</i></a>
@@ -70,7 +70,7 @@
       </div>
       <div class="card-stacked">
         <div class="card-content">
-        <h4> Vote </h4>	
+        <h4> Vote </h4>
 
         <div class="vote">
           <a class="btn-floating btn-large waves-effect waves-light green"><i class="material-icons">+</i></a>
