--- a/recipe-starter/post.html
+++ b/recipe-starter/post.html
@@ -19,16 +19,16 @@
         <p class="brand-logo">Hungry Mungry's Recipe Book</p>
         <ul id="nav-mobile" class="right hide-on-med-and-down">
           <li><a href="./index.html">Home</a></li>
-          <li><a href="./new_post.html">Create Post</a></li>
+          <li><a href="./new_post.html">Create Recipe</a></li>
 
         </ul>
       </div>
     </nav>
 
-		<h4 id=""> Title of recipe </h1> 
-				
+		<h4 id=""> Title of recipe </h1>
+
 		<img src="http://dreamatico.com/data_images/food/food-6.jpg" alt="food">
-		<a class="waves-effect waves-light btn" id="update-btn">Update Post</a>
+		<a class="waves-effect waves-light btn" id="update-btn">Update Recipe</a>
 
 
 	<div class="single-post">
@@ -59,7 +59,7 @@
         <div class="input-field col s6">
           <input placeholder="Write your comment!" id="comment" type="text" class="validate">
         </div>
-      </div>     
+      </div>
         <a class="waves-effect waves-light btn">New Comment</a>
     </form>
   </div>
@@ -99,9 +99,9 @@
 	<!-- comment --> <!-- X -->
 	<!-- create comment btn -->
 
-	
 
-	
+
+
 
 
 	<!-- footer -->
